src/app/vv-charts/outside-money-bar/outside-money-bar.component.scss
@import "../../styles/variables";
@import "../../styles/elements";

.title {
  padding: 0;
  font-size: 18px;
  font-weight: bold;
  color: $vvdarkblue;
}

.helper-tip {
  color: $vvgrey;
  font-size: 10px;
}

.title, .helper-tip, .raised{
    color:#fff;
    h2, h3{
        color:#fff;
        margin: 0px 0px 5px 0px;
    }
}

.chart-container-outside{
    height:10vh; 
    width:58vw;
    border-left:1px solid #727272;
    margin-left:40px;
}

.outside-grid{
    display: grid;
    grid-template-columns:60vw 0.8fr;
    justify-self: stretch;
   
    .raised{
        padding:20px 0px 20px 30px;
        text-align: left;
        border-left: 1px solid #727272;
        align-self: center;
    }
}

h2 {
  font-weight: normal;
  font-size: 12px;
  color: $vvgrey;
  margin: 5px 0px 10px 0px;
}

h3 {
  font-size: 18px;
  color: $vvdarkgrey;
}

i {
  cursor: pointer;
}

